--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <html>
-	<head>
-		<title>CSCI-590 Login</title>
+  <head>
+    <title>CSCI-590 Login</title>
 		<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="./css/main.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
   </head>
   <body>
+    <div class="banner">
+      <img src="./img/USC-Viterbi-School-of-Engineering.png" alt="viterbi-logo" id="viterbi-logo">
+      <p>CSCI-590: Directed Research</p>
+    </div>
+    <div id="login_box" class ="col-md-6 col-sm-8 col-10">
+      <form>
+        <div class="form-group">
+          <label for="email">Email address</label>
+          <input type="email" class="form-control" id="email" placeholder="example@usc.edu">
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" class="form-control" id="password" placeholder="**********">
+        </div>
+        <button type="submit" class="btn btn-danger" id="btn_login">Log in</button>
+        <div class="form-group">
+          <a href="">Sign up</a> | <a href="">Forgot your password?</a>
+        </div>
+      </form>
+    </div>
   </body>
 </html>
