--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
       </div>
     </div>
-    <div id="login_box" class ="col-md-6 col-sm-8 col-10">
+    <div class ="content_box col-md-8 col-sm-10 col-12">
       <form novalidate id="login_form">
         <h1>Log in</h1>
         <div class="form-group">
